<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.studytime.ui.auth.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action android:id="@+id/action_login_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action android:id="@+id/action_login_to_reset"
            app:destination="@id/resetPasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.studytime.ui.auth.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register">
        <action android:id="@+id/action_register_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/resetPasswordFragment"
        android:name="com.example.studytime.ui.auth.ResetPasswordFragment"
        android:label="@string/title_reset_password"
        tools:layout="@layout/fragment_reset_password" />

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.studytime.ui.dashboard.DashboardFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_dashboard">
        <action android:id="@+id/action_dashboard_to_hallSelection"
            app:destination="@id/hallSelectionFragment" />
        <action android:id="@+id/action_dashboard_to_myBookings"
            app:destination="@id/myBookingsFragment" />
        <action android:id="@+id/action_dashboard_to_profile"
            app:destination="@id/profileFragment" />
        <action android:id="@+id/action_dashboard_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/dashboardFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/hallSelectionFragment"
        android:name="com.example.studytime.ui.booking.HallSelectionFragment"
        android:label="@string/title_select_hall"
        tools:layout="@layout/fragment_hall_selection">
        <action android:id="@+id/action_hallSelection_to_tableSelection"
            app:destination="@id/tableSelectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/tableSelectionFragment"
        android:name="com.example.studytime.ui.booking.TableSelectionFragment"
        android:label="@string/title_select_table"
        tools:layout="@layout/fragment_table_selection">
        <action android:id="@+id/action_tableSelection_to_timeSlot"
            app:destination="@id/timeSlotFragment" />
    </fragment>

    <fragment
        android:id="@+id/timeSlotFragment"
        android:name="com.example.studytime.ui.booking.TimeSlotFragment"
        android:label="@string/title_select_time"
        tools:layout="@layout/fragment_time_slot">
        <action android:id="@+id/action_timeSlot_to_confirmation"
            app:destination="@id/confirmationFragment" />
    </fragment>

    <fragment
        android:id="@+id/confirmationFragment"
        android:name="com.example.studytime.ui.booking.ConfirmationFragment"
        android:label="@string/title_confirmation"
        tools:layout="@layout/fragment_confirmation">
        <action android:id="@+id/action_confirmation_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/dashboardFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/myBookingsFragment"
        android:name="com.example.studytime.ui.mybookings.MyBookingsFragment"
        android:label="@string/title_my_bookings"
        tools:layout="@layout/fragment_my_bookings" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.studytime.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
